-jeux calcul fonctionne

--- a/TestjeuxEdu/res/layout/activity_calcul.xml
+++ b/TestjeuxEdu/res/layout/activity_calcul.xml
@@ -27,4 +27,25 @@
         android:layout_marginTop="140dp"
         android:text="TextView" />
 
+    <EditText
+        android:id="@+id/chiffreTap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/calcul"
+        android:layout_toRightOf="@+id/intro"
+        android:ems="10"
+        android:inputType="number" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/calculer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
+        android:text="Calculer" />
+
 </RelativeLayout>
