--- a/TestjeuxEdu/res/layout/activity_calcul.xml
+++ b/TestjeuxEdu/res/layout/activity_calcul.xml
@@ -27,25 +27,24 @@
         android:layout_marginTop="140dp"
         android:text="TextView" />
 
-    <EditText
-        android:id="@+id/chiffreTap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/calcul"
-        android:layout_toRightOf="@+id/intro"
-        android:ems="10"
-        android:inputType="number" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/calculer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/chiffreTap"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="36dp"
         android:text="Calculer" />
+
+    <EditText
+        android:id="@+id/chiffreTap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/calcul"
+        android:layout_alignBottom="@+id/calcul"
+        android:layout_toRightOf="@+id/calculer"
+        android:ems="10"
+        android:inputType="number"
+        android:maxLength="3" />
 
 </RelativeLayout>
